--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="js/javascript.css">
     <link rel="stylesheet" href="css/output.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>سوالات متداول</title>
 </head>
 <body class="font-semibold">
+    <section class="group w-[150px] h-[150px] md:w-[200px] md:h-[200px] fixed z-50 bottom-0 right-0">
+        <figure class="w-[120px] h-[120px] md:w-[170px] md:h-[170px] fixed bottom-1 right-1">
+          <img class="w-full h-full relative rounded-full cursor-pointer shadow-[0px_0px_64px_21px_#2b6cb0]" src="img/profile.JPG" alt="">
+          <a class="hidden hover:text-orange-500 group-hover:flex group-hover:right-32 md:group-hover:right-44 duration-500 group-hover:top-[5px] md:group-hover:top-[10px] text-xl md:text-3xl absolute right-24 top-36" href="https://instagram.com/mohammad_jodaki_web"><i class="bi bi-instagram"></i></a>
+          <a class="hidden hover:text-orange-500 group-hover:flex group-hover:right-32 md:group-hover:right-44 duration-500 group-hover:top-[35px] md:group-hover:top-[50px] text-xl md:text-3xl absolute right-24 top-36" href="https://www.linkedin.com/in/mohammad-jodaki"><i class="bi bi-linkedin"></i></a>
+          <a class="hidden hover:text-orange-500 group-hover:flex group-hover:right-32 md:group-hover:right-44 duration-500 group-hover:top-[65px] md:group-hover:top-[90px] text-xl md:text-3xl absolute right-24 top-36" href="https://github.com/mohammadjodaki"><i class="bi bi-github"></i></a>
+          <a class="hidden hover:text-orange-500 group-hover:flex group-hover:right-32 md:group-hover:right-44 duration-500 group-hover:top-[95px] md:group-hover:top-[130px] text-xl md:text-3xl absolute right-24 top-36" href="#"><i class="bi bi-envelope-at-fill"></i></a>
+        </figure>
+      </section>
     <section>
         <div class="w-full h-52 mt-20 bg-header-img">
             <h1 class="text-5xl text-white text-center p-20">سوالات متداول</h1>
